--- a/101.html
+++ b/101.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самостоятельно делать починку, то первым делом необходимо получить инфу о том, как заниматься ремонтом кузова автомобиля. Для этих целей стоит воспользоваться каким-либо поисковиком, скажем, рамблером, либо посмотреть номера журналов "Моделист-конструктор" или "Ремонтируем своими силами", или почитать специализированный форум.
 <br>Надеюсь, что данная статья хотя бы чем-то помогла вам решить эту проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
