--- a/102.html
+++ b/102.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же приняли решение своими силами чинить, то сперва наперво есть смысл получить инфу о том, как делать починку микроволновки. Для этих целей имеет смысл воспользоваться рамблером либо yahoo, или просмотреть выпуски журналов "Умелый мастер".
 <br>Думаю, что настоящая статья хотя бы немного помогла вам отремонтировать микроволновку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
