--- a/104.html
+++ b/104.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы решили своими руками заниматься ремонтом, то сперва наперво нужно получить инфу о том, как заниматься починкой айфона. Для этих целей можно воспользоваться яндексом либо яхой, или пролистать старые номера журналов "Юный техник", "Моделист-конструктор", или почитать профильный форум.
 <br>Я надеюсь, что настоящая статья поможет вам отремонтировать айфон.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
