--- a/106.html
+++ b/106.html
@@ -63,6 +63,12 @@
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и настоящая статья поможет вам решить этот вопрос. В следующей статье я напишу о том, как починить шаровой кран или потолок после протечки.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех свежих событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
