--- a/107.html
+++ b/107.html
@@ -63,6 +63,12 @@
 <br>Если вы все таки приняли решение самому заниматься ремонтом, то сперва наперво есть смысл раздобыть информацию о том, как чинить тахометр. Для этих целей можно воспользоваться любым поисковиком, скажем, rambler, либо пересмотреть старые выпуски журналов "Домашняя мастерская", "Умелый мастер" и им подобных, или задать вопрос на форуме или сообществе.
 <br>Думаю, что эта статья хотя бы немного поможет вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
