--- a/110.html
+++ b/110.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самостоятельно ремонтировать, то сначала стоит узнать о том, как чинить электронные часы. Для этой цели стоит воспользоваться каким-нибудь поисковиком, или почитать архивные выпуски журналов типа "Домашний мастер", "Домашняя мастерская", либо пообщаться на профильном сообществе.
 <br>Я надеюсь, что вы не напрасно потратили время и эта статья хотя бы чем-то помогла вам отремонтировать электронные часы. В следующей статье вы сможете узнать о том, как отремонтировать бетон или бетон.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
