--- a/111.html
+++ b/111.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не напрасно потратили усилия и эта статья хотя бы чем-то помогла вам починить кузов. В следующий раз вы сможете узнать о том, как починить пластмассовый бампер или пластмассовый бампер.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
