--- a/113.html
+++ b/113.html
@@ -62,6 +62,12 @@
 <br>Если вы решили самостоятельно делать ремонт, то сперва наперво стоит узнать о том, как заниматься починкой клавиши на ноутбуке. Для этой цели можно воспользоваться гуглом или рамблером.
 <br>Думаю, что данная статья помогла вам решить эту задачу. В следующий раз я напишу о том, как отремонтировать кузов либо игрушечный пистолет.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
