--- a/118.html
+++ b/118.html
@@ -64,6 +64,12 @@
 <br>Я думаю, что эта статья хотя бы чем-то смогла помочь вам решить вопрос. В следующей статье я напишу о том, как починить катализатор или лоджию.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех актуальных событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
