--- a/120.html
+++ b/120.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение самому чинить, то сначала нужно узнать о том, как чинить водопроводный кран. Для этого можно воспользоваться яхой либо mail.ru.
 <br>Надеюсь, что эта статья хотя бы немного помогла вам решить данную задачу. В следующий раз я напишу о том, как отремонтировать тросик спидометра или авто.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
