--- a/124.html
+++ b/124.html
@@ -63,6 +63,12 @@
 <br>Если вы приняли решение своими силами заниматься починкой, то первым делом стоит узнать о том, как ремонтировать доводчик. Для этих целей стоит воспользоваться каким-нибудь поисковиком, или зайти на форум.
 <br>Я думаю, что данная статья поможет вам отремонтировать доводчик. В следующей статье я напишу о том, как отремонтировать аккумулятор ноутбука или кухонный смеситель.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
