--- a/126.html
+++ b/126.html
@@ -60,6 +60,12 @@
 <br>Если вы все таки решили самостоятельно заниматься починкой, то сперва нужно раздобыть информацию о том, как ремонтировать розетку. Для этой цели стоит воспользоваться поисковиком, или задать вопрос на профильном форуме.
 <br>Я думаю, что эта статья сможет помочь вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
