--- a/130.html
+++ b/130.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки приняли решение собственными силами выполнять починку, то сначала нужно узнать о том, как заниматься ремонтом сапог. Для этого имеет смысл воспользоваться каким-либо поисковиком, или почитать номера журналов "Моделист-конструктор", "Умелый мастер" и т.д..
 <br>Я надеюсь, что вы не напрасно потратили свое драгоценное время и эта статья поможет вам починить сапоги.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
