--- a/132.html
+++ b/132.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самому чинить, то сперва нужно получить информацию о том, как чинить mp3. Для этой цели есть смысл воспользоваться вашим любимым поисковиком, скажем, rambler или яхой, или просмотреть номера журналов наподобие "Умелый мастер", или поискать ответ на соответствующий вопрос на популярном форуме.
 <br>Думаю, что данная статья хотя бы чем-то помогла вам решить эту проблему. В следующий раз вы сможете прочесть о том, как починить замок дверной или замок дверной.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
