--- a/135.html
+++ b/135.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самостоятельно чинить, то сначала надо раздобыть инфу о том, как ремонтировать трансформатор. Для этого можно воспользоваться поисковиком, или почитать старые выпуски журналов "Умелый мастер", "Домашняя мастерская" и т.п., или изучить тематический форум.
 <br>Надеюсь, что эта статья хотя бы немного помогла вам решить задачу. В следующий раз я напишу о том, как отремонтировать старый стул или старый стул.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
