--- a/136.html
+++ b/136.html
@@ -60,6 +60,12 @@
 <br>Если вы все таки приняли решение самостоятельно ремонтировать, то сперва нужно получить информацию о том, как заниматься ремонтом обогрева стекла. Для этого стоит воспользоваться яндексом или мэилру, или посмотреть выпуски журналов "Юный техник", или поискать ответ на данный вопрос на тематическом сообществе или форуме.
 <br>Я надеюсь, что данная статья хотя бы чем-нибудь помогла вам решить данную проблему. В следующей статье вы сможете узнать о том, как отремонтировать радиоприемник либо радиоприемник.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
