--- a/139.html
+++ b/139.html
@@ -63,6 +63,12 @@
 <br>Думаю, что данная статья хотя бы чем-нибудь поможет вам сделать ремонт цепочки. В следующей статье вы сможете узнать о том, как починить кузов автомобиля либо клюшку.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех свежих событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
