--- a/145.html
+++ b/145.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что настоящая статья помогла вам решить задачу. 
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех свежих событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
