--- a/150.html
+++ b/150.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение самому ремонтировать, то сперва наперво стоит получить информацию о том, как заниматься ремонтом велосипеда. Для этого можно воспользоваться рамблером, или зайти на соответствующий форум.
 <br>Надеюсь, что эта статья поможет вам решить вопрос. В следующий раз вы сможете прочесть о том, как отремонтировать потолок после протечки либо потолок после протечки.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
