--- a/152.html
+++ b/152.html
@@ -60,6 +60,12 @@
 <br>Если вы все же приняли решение своими руками заниматься ремонтом, то сперва надо узнать о том, как заниматься ремонтом звуковой карты. Для этой цели можно воспользоваться bing, или почитать архивные выпуски журналов типа "Домашняя мастерская" или "Умелый мастер", или посетить соответствующий форум либо сообщество.
 <br>Я надеюсь, что вы не напрасно потратили время и эта статья поможет вам решить вопрос. В следующей статье вы сможете узнать о том, как отремонтировать адаптер ноутбука или дверную ручку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
