--- a/157.html
+++ b/157.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки решили самостоятельно выполнять починку, то сначала необходимо раздобыть информацию о том, как заниматься починкой кресла. Для этих целей есть смысл воспользоваться каким-нибудь поисковиком, или посмотреть выпуски журналов "Моделист-конструктор", "Домашняя мастерская", "Сам себе мастер" и им подобных.
 <br>Я думаю, что эта статья хотя бы чем-нибудь сможет помочь вам решить эту проблему. В следующей статье я напишу о том, как отремонтировать кий либо лазерный принтер.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
