--- a/158.html
+++ b/158.html
@@ -64,6 +64,12 @@
 <br>Я надеюсь, что настоящая статья хотя бы чем-нибудь поможет вам починить атомайзер. В следующий раз я напишу о том, как отремонтировать смеситель или кран на кухне.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех актуальных событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
