--- a/168.html
+++ b/168.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили самостоятельно делать ремонт, то сперва наперво необходимо получить информацию о том, как чинить бетонный пол. Для этих целей можно воспользоваться любым поисковиком, например, rambler, или почитать старые выпуски журналов типа "Ремонтируем собственными силами", либо задать вопрос на специализированном форуме.
 <br>Думаю, что вы не зря потратили усилия и эта статья поможет вам решить эту задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
