--- a/169.html
+++ b/169.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки приняли решение самостоятельно ремонтировать, то сперва надо узнать о том, как заниматься ремонтом ручного тормоза. Для этого стоит воспользоваться бингом.
 <br>Я надеюсь, что эта статья хотя бы немного может помочь вам отремонтировать ручной тормоз. В следующий раз вы сможете узнать о том, как починить паркет либо паркет.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
