--- a/176.html
+++ b/176.html
@@ -63,6 +63,12 @@
 <br>Если вы приняли решение своими руками чинить, то сначала нужно получить информацию о том, как ремонтировать штекер наушников. Для этих целей можно воспользоваться рамблером либо google, либо найти ответ на данный вопрос на профильном сообществе.
 <br>Я думаю, что эта статья хотя бы немного сможет помочь вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
