--- a/178.html
+++ b/178.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все же приняли решение своими силами заниматься починкой, то сначала надо узнать о том, как заниматься починкой алюминиевого радиатора. Для этих целей стоит воспользоваться поисковиком, например, bing либо yahoo, или пролистать старые подишивки журналов "Умелый мастер", "Моделист-конструктор" и так далее, или изучить специализированный форум.
 <br>Надеюсь, что данная статья хотя бы немного помогла вам выполнить ремонт алюминиевого радиатора.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
