--- a/179.html
+++ b/179.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки решили самому ремонтировать, то сперва надо раздобыть информацию о том, как выполнять ремонт зарядного устройства. Для этих целей можно воспользоваться поисковиком, например, yahoo или бингом, или посетить соответствующий форум.
 <br>Надеюсь, что настоящая статья может помочь вам выполнить ремонт зарядного устройства.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
