--- a/182.html
+++ b/182.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же приняли решение своими руками заниматься ремонтом, то сперва необходимо раздобыть информацию о том, как заниматься починкой стоек. Для этой цели можно воспользоваться вашим любимым поисковиком, например, гуглом либо bing, либо просмотреть архивные номера журналов "Юный техник" или "Домашний мастер".
 <br>Надеюсь, что эта статья сможет помочь вам отремонтировать стойки. В следующей статье я напишу о том, как починить деревянный пол или пластиковую лодку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
