--- a/191.html
+++ b/191.html
@@ -61,6 +61,12 @@
 <br>Если вы приняли решение самому ремонтировать, то сперва нужно получить информацию о том, как выполнять ремонт телевизора. Для этой цели можно воспользоваться поисковиком, или почитать подишивки журналов наподобие "Домашний мастер" или "Моделист-конструктор", или изучить профильный форум.
 <br>Я думаю, что вы не зря потратили свои усилия и эта статья помогла вам починить телевизор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
