--- a/192.html
+++ b/192.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы приняли решение самостоятельно заниматься починкой, то сначала надо узнать о том, как заниматься ремонтом крана на кухне. Для этого имеет смысл воспользоваться поисковиком, скажем, яндексом либо яхой, либо пересмотреть номера журналов "Ремонтируем самому", "Сам себе мастер" и т.д., или почитать специализированный форум.
 <br>Надеюсь, что эта статья может помочь вам выполнить починку крана на кухне.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
