--- a/195.html
+++ b/195.html
@@ -60,6 +60,12 @@
 <br>Итак, если вы приняли решение самому чинить, то первым делом необходимо получить информацию о том, как заниматься ремонтом крана в ванной. Для этой цели можно воспользоваться гуглом либо bing, или просмотреть архивные подишивки журналов типа "Домашняя мастерская" или "Юный техник", либо зайти на тематический форум либо сообщество.
 <br>Я думаю, что эта статья хотя бы чем-то помогла вам отремонтировать кран в ванной. В следующей статье вы сможете прочесть о том, как починить газовый котел либо плеер.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
