--- a/198.html
+++ b/198.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самому ремонтировать, то первым делом надо получить информацию о том, как чинить картридж canon. Для этого стоит воспользоваться гуглом, либо пообщаться на тематическом сообществе или форуме.
 <br>Я думаю, что эта статья хотя бы немного помогла вам решить этот вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
