--- a/105.html
+++ b/105.html
@@ -60,6 +60,12 @@
 <br>Если вы приняли решение самому делать ремонт, то сперва наперво нужно узнать о том, как чинить аккумулятор шуруповерта. Для этой цели можно воспользоваться yandex или google, или просмотреть номера журналов "Умелый мастер", "Юный техник" и т.п..
 <br>Я надеюсь, что настоящая статья хотя бы чем-нибудь поможет вам решить данную задачу. В следующей статье я расскажу о том, как починить мотоблок или деревенский дом.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
