--- a/109.html
+++ b/109.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не зря потратили свое драгоценное время и данная статья смогла помочь вам решить данную задачу. 
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех последних событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
