--- a/112.html
+++ b/112.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что вы не зря потратили время и эта статья хотя бы немного помогла вам починить паркетный пол. В следующей статье вы сможете прочесть о том, как отремонтировать поликарбонат или поликарбонат.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
