--- a/114.html
+++ b/114.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не зря потратили свое драгоценное время и данная статья хотя бы чем-то поможет вам сделать починку стеклопакета. 
 <br>Заходите к нам почаще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
