--- a/115.html
+++ b/115.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и настоящая статья помогла вам починить флэшку. В следующий раз я напишу о том, как отремонтировать телефон samsung или мопед.
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
