--- a/116.html
+++ b/116.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самостоятельно заниматься ремонтом, то сперва необходимо узнать о том, как делать ремонт матраса. Для этой цели стоит воспользоваться поисковиком, например, bing либо яхой.
 <br>Надеюсь, что настоящая статья хотя бы чем-то помогла вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
