--- a/117.html
+++ b/117.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили собственными силами заниматься ремонтом, то сперва нужно раздобыть информацию о том, как выполнять ремонт унитаза. Для этих целей имеет смысл воспользоваться мэилру или bing.
 <br>Думаю, что эта статья хотя бы чем-нибудь сможет помочь вам отремонтировать унитаз. В следующей статье я расскажу о том, как починить сенсор на телефоне или сенсор на телефоне.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
