--- a/119.html
+++ b/119.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение самому чинить, то сперва надо раздобыть информацию о том, как ремонтировать удилище. Для этой цели можно воспользоваться поисковиком, скажем, mail.ru либо google, либо просмотреть подишивки журналов наподобие "Моделист-конструктор".
 <br>Думаю, что вы не зря потратили время и настоящая статья хотя бы чем-то смогла помочь вам починить удилище.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
