--- a/121.html
+++ b/121.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не напрасно потратили усилия и данная статья хотя бы чем-то сможет помочь вам решить эту задачу. В следующий раз я расскажу о том, как починить акпп или видеокарту.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех актуальных событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
