--- a/123.html
+++ b/123.html
@@ -63,6 +63,12 @@
 <br>Думаю, что данная статья хотя бы чем-нибудь помогла вам отремонтировать душевой поддон. В следующей статье я напишу о том, как починить зонт или зонт.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
