--- a/125.html
+++ b/125.html
@@ -63,6 +63,12 @@
 <br>Думаю, что вы не зря потратили свои усилия и эта статья сможет помочь вам решить данную задачу. 
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
