--- a/127.html
+++ b/127.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что настоящая статья смогла помочь вам починить аккумулятор. В следующий раз вы сможете прочесть о том, как отремонтировать cs или плеер.
 <br>Заходите к нам еще, чтобы быть в курсе всех последних событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
