--- a/128.html
+++ b/128.html
@@ -62,6 +62,12 @@
 <br>Если вы все же приняли решение собственными руками выполнять ремонт, то сперва имеет смысл узнать о том, как делать ремонт кпп. Для этой цели можно воспользоваться поисковиком.
 <br>Я думаю, что эта статья хотя бы немного помогла вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
