--- a/129.html
+++ b/129.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что вы не зря потратили свои усилия и данная статья хотя бы немного сможет помочь вам починить гидрокостюм. 
 <br>Заходите к нам еще, чтобы быть в курсе всех новых событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
