--- a/131.html
+++ b/131.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что вы не напрасно потратили усилия и настоящая статья смогла помочь вам решить проблему. В следующей статье вы сможете узнать о том, как отремонтировать блок питания компьютера или блок питания компьютера.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
