--- a/133.html
+++ b/133.html
@@ -63,6 +63,12 @@
 <br>Я надеюсь, что данная статья хотя бы чем-то поможет вам решить вопрос. В следующий раз вы сможете узнать о том, как отремонтировать экран на телефоне или термос.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
