--- a/134.html
+++ b/134.html
@@ -63,6 +63,12 @@
 <br>Я надеюсь, что эта статья хотя бы чем-нибудь помогла вам решить вопрос. В следующей статье я расскажу о том, как починить натяжной потолок или газлифт.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех новых событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
