--- a/137.html
+++ b/137.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что вы не зря потратили время и эта статья хотя бы немного может помочь вам починить напольные весы. В следующий раз вы сможете узнать о том, как отремонтировать стеклоподъемник либо стеклоподъемник.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех свежих событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
