--- a/138.html
+++ b/138.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что эта статья сможет помочь вам починить электроплиту. 
 <br>Заходите на наш портал еще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
