--- a/140.html
+++ b/140.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки приняли решение своими руками чинить, то сперва нужно узнать о том, как заниматься ремонтом картриджа. Для этой цели можно воспользоваться rambler, или создать тему на соответствующем форуме.
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и настоящая статья поможет вам сделать починку картриджа. В следующий раз я напишу о том, как починить джостик либо джостик.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
