--- a/141.html
+++ b/141.html
@@ -61,6 +61,12 @@
 <br>Если вы все же приняли решение своими руками ремонтировать, то сперва наперво нужно узнать о том, как выполнять починку душа. Для этого можно воспользоваться яхой либо rambler, или зайти на соответствующий форум.
 <br>Я надеюсь, что вы не зря потратили свое драгоценное время и эта статья смогла помочь вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
