--- a/142.html
+++ b/142.html
@@ -63,6 +63,12 @@
 <br>Если вы приняли решение своими руками чинить, то сперва наперво нужно раздобыть информацию о том, как делать починку шуруповерта. Для этой цели стоит воспользоваться поисковиком, или посмотреть подишивки журналов наподобие "Умелый мастер".
 <br>Я надеюсь, что эта статья может помочь вам решить проблему. В следующий раз я расскажу о том, как отремонтировать пульт от телевизора или прикуриватель.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
