--- a/143.html
+++ b/143.html
@@ -64,6 +64,12 @@
 <br>Думаю, что эта статья поможет вам починить однорычажный смеситель. В следующий раз я напишу о том, как отремонтировать дизель или замок молнию.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
