--- a/146.html
+++ b/146.html
@@ -64,6 +64,12 @@
 <br>Думаю, что вы не зря потратили усилия и эта статья хотя бы чем-нибудь поможет вам сделать ремонт пластикового подоконника. В следующей статье вы сможете узнать о том, как отремонтировать ps3 или ps3.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех последних событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
