--- a/148.html
+++ b/148.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили самому чинить, то сперва необходимо получить инфу о том, как заниматься ремонтом автомагнитолы. Для этой цели имеет смысл воспользоваться mail.ru либо гуглом, или почитать старые выпуски журналов типа "Домашний умелец", "Ремонтируем все собственными руками".
 <br>Думаю, что вы не напрасно потратили свое драгоценное время и эта статья помогла вам отремонтировать автомагнитолу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
