--- a/149.html
+++ b/149.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что эта статья хотя бы чем-нибудь помогла вам решить этот вопрос. В следующей статье вы сможете узнать о том, как починить старый пол или старый пол.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
