--- a/151.html
+++ b/151.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что данная статья хотя бы чем-нибудь поможет вам починить шланг высокого давления. В следующий раз вы сможете прочесть о том, как починить жк монитор либо гнездо для наушников.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
