--- a/154.html
+++ b/154.html
@@ -62,6 +62,12 @@
 <br>Если вы решили самостоятельно заниматься ремонтом, то сперва необходимо узнать о том, как чинить тнвд. Для этой цели можно воспользоваться любым поисковиком, скажем, bing, или пересмотреть подишивки журналов "Сам себе мастер", "Ремонтируем самому", "Домашняя мастерская" и тому подобное, либо создать тему на специализированном форуме.
 <br>Я надеюсь, что эта статья хотя бы чем-то смогла помочь вам решить данную проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
