--- a/156.html
+++ b/156.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самому заниматься ремонтом, то сперва наперво необходимо раздобыть информацию о том, как заниматься починкой каблука. Для этих целей можно воспользоваться каким-нибудь поисковиком, или почитать подишивки журналов "Моделист-конструктор", "Юный техник", "Чиним самостоятельно" и т.д..
 <br>Я думаю, что вы не зря потратили время и эта статья хотя бы чем-нибудь смогла помочь вам отремонтировать каблук. В следующий раз вы сможете прочесть о том, как починить зонтик автомат или зонтик автомат.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
