--- a/159.html
+++ b/159.html
@@ -63,6 +63,12 @@
 <br>Если вы решили самому выполнять ремонт, то сперва необходимо узнать о том, как заниматься ремонтом газлифта. Для этой цели стоит воспользоваться каким-либо поисковиком, либо посмотреть подишивки журналов "Моделист-конструктор", "Сам себе мастер" и так далее, или найти ответ на нужный вопрос на профильном форуме или сообществе.
 <br>Думаю, что вы не зря потратили свои усилия и данная статья хотя бы чем-то поможет вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
