--- a/160.html
+++ b/160.html
@@ -61,6 +61,12 @@
 <br>Я надеюсь, что вы не напрасно потратили свое время и данная статья хотя бы немного помогла вам решить данную задачу. 
 <br>Заходите к нам еще, чтобы быть в курсе всех свежих событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
