--- a/161.html
+++ b/161.html
@@ -63,6 +63,12 @@
 <br>Думаю, что вы не напрасно потратили усилия и эта статья хотя бы немного может помочь вам решить вопрос. 
 <br>Заходите к нам еще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
