--- a/163.html
+++ b/163.html
@@ -61,6 +61,12 @@
 <br>Надеюсь, что вы не зря потратили свои усилия и эта статья сможет помочь вам решить данную проблему. 
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
