--- a/167.html
+++ b/167.html
@@ -61,6 +61,12 @@
 <br>Думаю, что вы не зря потратили свои усилия и данная статья поможет вам отремонтировать болгарку. 
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех свежих событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
