--- a/170.html
+++ b/170.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки приняли решение самостоятельно делать ремонт, то сперва наперво стоит получить информацию о том, как ремонтировать игрушечный пистолет. Для этих целей можно воспользоваться поисковиком, либо зайти на форум.
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и настоящая статья поможет вам отремонтировать игрушечный пистолет. В следующий раз вы сможете прочесть о том, как починить скрипучий пол либо циркуляционный насос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
