--- a/171.html
+++ b/171.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что вы не напрасно потратили усилия и эта статья помогла вам выполнить починку аквариума. В следующий раз я расскажу о том, как починить фотоаппарат canon либо слайдер.
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех актуальных событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
