--- a/172.html
+++ b/172.html
@@ -64,6 +64,12 @@
 <br>Я надеюсь, что вы не зря потратили усилия и настоящая статья поможет вам починить mp3 плеер. 
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех свежих событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
