--- a/174.html
+++ b/174.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самому чинить, то сперва надо получить информацию о том, как ремонтировать микроволновую печь. Для этого стоит воспользоваться yahoo либо бингом.
 <br>Я надеюсь, что данная статья хотя бы немного смогла помочь вам починить микроволновую печь.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
