--- a/175.html
+++ b/175.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не зря потратили время и эта статья хотя бы немного смогла помочь вам выполнить починку гидрокостюма. 
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех новых событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
