--- a/177.html
+++ b/177.html
@@ -63,6 +63,12 @@
 <br>Я надеюсь, что вы не напрасно потратили усилия и настоящая статья хотя бы немного сможет помочь вам починить обогрев стекла. 
 <br>Заходите к нам еще, чтобы быть в курсе всех свежих событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
