--- a/180.html
+++ b/180.html
@@ -61,6 +61,12 @@
 <br>Думаю, что вы не зря потратили усилия и эта статья поможет вам решить эту проблему. В следующий раз я расскажу о том, как починить бп или гарнитуру.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех последних событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
