--- a/181.html
+++ b/181.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили своими силами заниматься починкой, то сперва необходимо узнать о том, как выполнять ремонт флешки трансенд. Для этих целей можно воспользоваться rambler, или посмотреть подишивки журналов наподобие "Чиним самому", "Моделист-конструктор".
 <br>Я думаю, что вы не зря потратили свое время и данная статья может помочь вам решить эту задачу. В следующий раз я расскажу о том, как отремонтировать трансформатор или батарею ноутбука.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
