--- a/184.html
+++ b/184.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не зря потратили усилия и данная статья хотя бы чем-нибудь смогла помочь вам решить задачу. 
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех свежих событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
