--- a/187.html
+++ b/187.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки приняли решение своими руками ремонтировать, то сначала нужно узнать о том, как заниматься ремонтом матрицы. Для этих целей стоит воспользоваться yandex, или задать вопрос на популярном сообществе.
 <br>Я думаю, что вы не напрасно потратили усилия и данная статья хотя бы чем-нибудь смогла помочь вам решить данную задачу. В следующий раз вы сможете прочесть о том, как починить кубик рубика либо шрус.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
