--- a/188.html
+++ b/188.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы решили самостоятельно ремонтировать, то сперва наперво нужно узнать о том, как заниматься починкой акустической гитары. Для этого стоит воспользоваться бингом или мэилру, или посмотреть архивные номера журналов "Моделист-конструктор" или "Домашний умелец", либо задать вопрос на профильном сообществе.
 <br>Я думаю, что вы не напрасно потратили усилия и эта статья помогла вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
