--- a/189.html
+++ b/189.html
@@ -62,6 +62,12 @@
 <br>Думаю, что настоящая статья помогла вам починить ванную. В следующей статье вы сможете узнать о том, как починить пылесос либо цепочку.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех актуальных событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
