--- a/193.html
+++ b/193.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что вы не напрасно потратили свое время и данная статья помогла вам решить вопрос. В следующий раз я расскажу о том, как отремонтировать бампер либо бампер.
 <br>Заходите к нам еще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
