--- a/194.html
+++ b/194.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самому делать ремонт, то сперва нужно раздобыть информацию о том, как чинить зонт автомат. Для этих целей стоит воспользоваться mail.ru.
 <br>Надеюсь, что вы не напрасно потратили усилия и настоящая статья помогла вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
