--- a/196.html
+++ b/196.html
@@ -63,6 +63,12 @@
 <br>Думаю, что эта статья хотя бы чем-то смогла помочь вам отремонтировать стиральную машину samsung. В следующий раз вы сможете прочесть о том, как отремонтировать cs 1.6 либо ламинат.
 <br>Заходите к нам почаще, чтобы быть в курсе всех последних событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
