--- a/197.html
+++ b/197.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что настоящая статья поможет вам выполнить починку лазера. В следующий раз я расскажу о том, как починить привод или привод.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех свежих событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
